--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,18 +16,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.core.widget.NestedScrollView
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/materialup.appbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Light"
+        android:background="@color/white"
+        >
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
+            >
+
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="350dp">
+                android:layout_height="350dp"
+                app:layout_collapseMode="parallax"
+                android:id="@+id/frame_layout">
 
                 <ImageView
                     android:layout_width="match_parent"
@@ -53,8 +63,8 @@
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/profile_image"
-                        android:layout_width="118dp"
-                        android:layout_height="107dp"
+                        android:layout_width="130dp"
+                        android:layout_height="130dp"
                         app:civ_border_color="#FF000000"
                         app:civ_border_width="2dp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -69,6 +79,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@{profileViewModel.name}"
+                        android:textColor="@color/textcolor"
                         android:textSize="24sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -82,21 +93,23 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@{@string/userName(profileViewModel.login)}"
+                        android:textColor="@color/textcolor"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.498"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.773" />
+                        app:layout_constraintVertical_bias="0.755" />
 
                     <TextView
                         android:id="@+id/bio"
-                        android:layout_width="wrap_content"
+                        android:layout_width="367dp"
                         android:layout_height="wrap_content"
-                        android:text="@{profileViewModel.bio}"
                         android:paddingStart="10dp"
                         android:paddingEnd="10dp"
+                        android:text="@{profileViewModel.bio}"
                         android:textAlignment="center"
+                        android:textColor="@color/textcolor"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.498"
@@ -211,23 +224,38 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.802" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+
             <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:id="@+id/tab_layout" >
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
 
 
             </com.google.android.material.tabs.TabLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>
             <androidx.viewpager2.widget.ViewPager2
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/view_pager" />
 
-        </LinearLayout>
 
-    </androidx.core.widget.NestedScrollView>
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_margin="16dp"
+        android:text="Follow"
+        android:textAlignment="center"
+        android:textSize="10sp"
+        app:layout_anchor="@id/frame_layout"
+        app:layout_anchorGravity="bottom|center"
+        app:layout_scrollFlags="enterAlways"
+        />
 
 
 
