--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -74,6 +74,8 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.275" />
 
+
+
                     <TextView
                         android:id="@+id/name"
                         android:layout_width="wrap_content"
@@ -116,6 +118,19 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.9" />
+
+
+<!--                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
+<!--                        android:id="@+id/fab"-->
+<!--                        android:layout_width="150dp"-->
+<!--                        android:layout_height="40dp"-->
+<!--                        android:layout_margin="16dp"-->
+<!--                        android:text="Follow"-->
+<!--                        android:textAlignment="center"-->
+<!--                        android:textSize="10sp"-->
+<!--                        app:layout_constraintEnd_toEndOf="parent"-->
+<!--                        app:layout_constraintStart_toStartOf="parent"-->
+<!--                        app:layout_constraintTop_toBottomOf="@id/bio" />-->
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </FrameLayout>
 
