--- a/app/src/main/res/layout/repo_layout.xml
+++ b/app/src/main/res/layout/repo_layout.xml
@@ -9,7 +9,8 @@
     android:layout_marginBottom="15dp"
     android:layout_marginStart="25dp"
     android:layout_marginEnd="25dp"
-    android:layout_height="150dp">
+    android:layout_height="150dp"
+    android:elevation="20dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
