--- a/app/src/main/res/layout/fragment_repo_display.xml
+++ b/app/src/main/res/layout/fragment_repo_display.xml
@@ -8,7 +8,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recycler_view" />
+        android:id="@+id/recycler_view"
+        android:layout_marginTop="60dp"/>
 
 
 </FrameLayout>
