--- a/app/src/main/res/layout/repo_layout.xml
+++ b/app/src/main/res/layout/repo_layout.xml
@@ -155,8 +155,12 @@
             android:id="@+id/chip_group"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:theme="@style/Theme.AppCompat">
+            android:theme="@style/Theme.MaterialComponents">
 
+<!--            <com.google.android.material.chip.Chip-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="dfsfsdg"/>-->
         </com.google.android.material.chip.ChipGroup>
 
     </HorizontalScrollView>
