--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:id="@+id/nav_host_fragment"
     android:name="androidx.navigation.fragment.NavHostFragment"
     app:navGraph="@navigation/nav_graph"
+    app:defaultNavHost="true"
     tools:context=".user_interface.MainActivity">
 
 </androidx.fragment.app.FragmentContainerView>
