Added more UI tests

--- a/app/src/main/res/layout/fragment_user_not_found.xml
+++ b/app/src/main/res/layout/fragment_user_not_found.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/user_not_found_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="User Not Found"
